# qtPilot

./: .gitignore  .mcp.json  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  build-simplification-spec.md  child-process-injection-spec.md  ci-rebuild-spec.md  claude-code-plugin-spec.md  mcp-diagram.html  qt515-admin-elevation-spec.md  qtPilot-compatibility-modes.md  qtPilot-specification.md  qtmcp-log-20260315-235327.jsonl  qtmcp-log-20260316-003008.jsonl  spec-compatibility-report.md
.claude/skills/test-mcp-modes/: SKILL.md
.github/workflows/: ci.yml  release.yml
.planning/: MILESTONES.md  PROJECT.md  ROADMAP.md
.planning/debug/: flaky-console-tests.md  variant-json-compat.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v1.1-MILESTONE-AUDIT.md  v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md
.planning/phases/01-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-05-PLAN.md  01-05-SUMMARY.md  01-06-PLAN.md  01-06-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-core-introspection/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-03-PLAN.md  02-05-PLAN.md  02-06-PLAN.md  02-07-PLAN.md  02-07-SUMMARY.md  02-RESEARCH.md  02-UAT.md  02-VERIFICATION.md
.planning/phases/03-native-mode/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-04-PLAN.md  03-RESEARCH.md  03-UAT.md
.planning/phases/04-computer-use-mode/: 04-01-PLAN.md  04-02-PLAN.md  04-03-PLAN.md  04-04-PLAN.md  04-04-SUMMARY.md  04-05-PLAN.md  04-UAT.md  04-VERIFICATION.md
.planning/phases/05-chrome-mode/: 05-01-PLAN.md  05-02-PLAN.md  05-03-PLAN.md
.planning/phases/06-extended-introspection/: 06-01-PLAN.md  06-01-SUMMARY.md  06-02-PLAN.md  06-03-PLAN.md  06-03-SUMMARY.md  06-04-PLAN.md  06-04-SUMMARY.md  06-RESEARCH.md  06-VERIFICATION.md
.planning/phases/07-python-integration/: 07-01-PLAN.md  07-01-SUMMARY.md  07-02-PLAN.md  07-02-SUMMARY.md  07-03-PLAN.md  07-03-SUMMARY.md  07-CONTEXT.md  07-RESEARCH.md  07-UAT.md  07-VERIFICATION.md
.planning/phases/08-cmake-multi-qt-foundation/: 08-01-PLAN.md  08-01-SUMMARY.md  08-02-PLAN.md  08-02-SUMMARY.md  08-CONTEXT.md  08-VERIFICATION.md
.planning/phases/09-ci-matrix-build/: 09-01-PLAN.md  09-01-SUMMARY.md  09-CONTEXT.md  09-VERIFICATION.md
.planning/phases/10-patched-qt-ci/: 10-02-PLAN.md  10-RESEARCH.md  10-VERIFICATION.md
.planning/phases/11-release-automation/: 11-02-PLAN.md  11-02-SUMMARY.md  11-UAT.md  11-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES-DISTRIBUTION.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
_specs/: IMPLEMENTATION_PLAN.md
cmake/: qtPilotConfig.cmake.in  qtPilot_inject_probe.cmake
docs/: BUILDING.md  FEEDBACK.md  GETTING-STARTED.md  MACOS.md  TROUBLESHOOTING.md
docs/plans/: 2026-03-02-admin-elevation-qt515.md  2026-03-06-dynamic-mode-switching-spec.md  2026-03-06-message-logger-spec.md  launcher-auto-env-spec.md
python/: README.md  pyproject.toml
python/src/qtmcp/: cli.py  event_recorder.py  message_logger.py  qt_env.py  server.py
python/src/qtpilot/: __init__.py  __main__.py  cli.py  connection.py  discovery.py  download.py  event_recorder.py  logging_middleware.py  message_logger.py  qt_env.py  server.py  status.py
python/src/qtpilot/tools/: chrome.py  cu.py  discovery_tools.py  logging_tools.py  native.py  recording_tools.py
python/tests/: conftest.py  test_connection.py  test_connection_multi_handler.py  test_download.py  test_event_recorder.py  test_logging_middleware.py  test_logging_tools.py  test_message_logger.py  test_mode_switching.py  test_recording_tools.py  test_tools.py
scripts/: launch-with-probe.sh
src/compat/: compat_core.h  compat_gui.h  compat_variant.h
src/launcher/: CMakeLists.txt  elevation_windows.cpp  elevation_windows.h  injector.h  injector_linux.cpp  injector_macos.cpp  injector_windows.cpp  main.cpp  qt_env_setup.cpp  qt_env_setup.h
src/probe/: CMakeLists.txt
src/probe/accessibility/: accessibility_tree_walker.cpp  accessibility_tree_walker.h  console_message_capture.cpp  console_message_capture.h  role_mapper.cpp  role_mapper.h
src/probe/api/: chrome_mode_api.cpp  chrome_mode_api.h  computer_use_mode_api.cpp  computer_use_mode_api.h  error_codes.h  native_mode_api.cpp  native_mode_api.h  response_envelope.cpp  response_envelope.h  symbolic_name_map.cpp  symbolic_name_map.h
src/probe/core/: child_injector_windows.cpp  child_injector_windows.h  injector.h  injector_linux.cpp  injector_windows.cpp  object_registry.cpp  object_registry.h  object_resolver.cpp  object_resolver.h  probe.cpp  probe.h  probe_init_linux.cpp  probe_init_macos.cpp  probe_init_windows.cpp
src/probe/interaction/: hit_test.cpp  hit_test.h  input_simulator.cpp  input_simulator.h  key_name_mapper.cpp  key_name_mapper.h  screenshot.cpp  screenshot.h
src/probe/introspection/: event_capture.cpp  event_capture.h  meta_inspector.cpp  meta_inspector.h  model_navigator.cpp  model_navigator.h  object_id.cpp  object_id.h  qml_inspector.cpp  qml_inspector.h  signal_monitor.cpp  signal_monitor.h  variant_json.cpp  variant_json.h
src/probe/transport/: discovery_broadcaster.cpp  discovery_broadcaster.h  jsonrpc_handler.cpp  jsonrpc_handler.h  notification_queue.h  websocket_server.cpp  websocket_server.h
src/shared/: CMakeLists.txt  process_inject_windows.cpp  process_inject_windows.h
test_app/: CMakeLists.txt  childwindow.cpp  childwindow.h  main.cpp  mainwindow.cpp  mainwindow.h
tests/: CMakeLists.txt  test_admin_injection.cpp  test_chrome_mode_api.cpp  test_ci_rebuild.py  test_computer_use_api.cpp  test_event_capture.cpp  test_jsonrpc.cpp  test_jsonrpc_introspection.cpp  test_key_name_mapper.cpp  test_meta_inspector.cpp  test_model_navigator.cpp  test_native_mode_api.cpp  test_notification_queue.cpp  test_object_id.cpp  test_object_id_refresh.cpp  test_object_registry.cpp  test_signal_monitor.cpp  test_ui_interaction.cpp
(+24 files in other folders)
