[project]
name = "qtpilot"
dynamic = ["version"]
description = "MCP server for controlling Qt applications via qtPilot probe"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Scott Johnson"}
]
keywords = ["mcp", "qt", "automation", "testing", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "fastmcp>=2.0,<3",
    "websockets>=14.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21"]

[project.urls]
Homepage = "https://github.com/ssss2art/qtPilot"
Documentation = "https://github.com/ssss2art/qtPilot#readme"
Repository = "https://github.com/ssss2art/qtPilot"
Issues = "https://github.com/ssss2art/qtPilot/issues"
Changelog = "https://github.com/ssss2art/qtPilot/releases"

[project.scripts]
qtpilot = "qtpilot.cli:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
raw-options.root = ".."

[tool.hatch.build.hooks.vcs]
version-file = "src/qtpilot/_version.py"
